--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "build": "microbundle",
     "dev": "microbundle watch",
-    "lint": "standard --fix ./**/*.js",
+    "lint": "standard --fix src/*.js",
     "test": "jest"
   },
   "engine": {
@@ -25,24 +25,14 @@
     "generate-password"
   ],
   "devDependencies": {
-    "babel-preset-env": "^1.6.1",
-    "jest": "^22.4.3",
-    "microbundle": "^0.4.4",
-    "standard": "^11.0.1"
+    "@babel/core": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
+    "babel-jest": "^24.9.0",
+    "jest": "^24.9.0",
+    "microbundle": "^0.11.0",
+    "standard": "^14.3.1"
   },
-  "babel": {
-    "presets": [
-      [
-        "env"
-      ]
-    ]
-  },
-  "standard": {
-    "env": {
-      "jest": true
-    },
-    "ignore": [
-      "dist"
-    ]
+  "dependencies": {
+    "randombytes": "^2.1.0"
   }
 }
